add works general layout

--- a/portfolio/baner/index.html
+++ b/portfolio/baner/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
  	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-	<!-- <link rel="stylesheet" href="style.css"> -->
-	<style>
+	<link rel="stylesheet" href="style.css">
+	<!-- <style>
 		html {
 			height: 100%;
 			width: 100%;
@@ -235,7 +235,7 @@
 			padding: 0 30px;
 			animation: wink 3s ease-in-out infinite;
 		}
-	</style>
+	</style> -->
 </head>
 
 
