--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@900&family=Elsie:wght@900&family=Vampiro+One&display=swap" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Homemade+Apple&family=League+Script&family=Meddon&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Meddon&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
